# src/lib/api/index.ts
@@ -20,6 +20,7 @@ export type { CreateExternalApplicationRequest } from './models/CreateExternalAp
 export type { CreateHostServerRequest } from './models/CreateHostServerRequest';
 export type { CreateHostServerTypeBodyRequest } from './models/CreateHostServerTypeBodyRequest';
 export type { CreateHostServerTypeMappingRequest } from './models/CreateHostServerTypeMappingRequest';
+export type { CreateInfraDependencyRequest } from './models/CreateInfraDependencyRequest';
 export type { CreateNewUserRequest } from './models/CreateNewUserRequest';
 export type { CreatePlatformTypeBodyRequest } from './models/CreatePlatformTypeBodyRequest';
 export type { CreatePlatformTypeMappingRequest } from './models/CreatePlatformTypeMappingRequest';
@@ -31,6 +32,7 @@ export type { CreateSshKeyHostMappingRequestWithoutUserID } from './models/Creat
 export type { CreateSshKeyHostMappingResponse } from './models/CreateSshKeyHostMappingResponse';
 export type { CreateSshKeyRequest } from './models/CreateSshKeyRequest';
 export type { CreateSshKeyResponse } from './models/CreateSshKeyResponse';
+export type { CreateUserApplicationRequest } from './models/CreateUserApplicationRequest';
 export type { CreateUserRoleRequest } from './models/CreateUserRoleRequest';
 export type { CreateUserRoleResponse } from './models/CreateUserRoleResponse';
 export type { DeleteRolePermissionMappingRequest } from './models/DeleteRolePermissionMappingRequest';
@@ -58,6 +60,7 @@ export type { HostServerIDResponse } from './models/HostServerIDResponse';
 export type { HostServerResponse } from './models/HostServerResponse';
 export type { HostServersResponse } from './models/HostServersResponse';
 export type { HostServerType } from './models/HostServerType';
+export type { InfraDependencyDao } from './models/InfraDependencyDao';
 export type { JsonInt } from './models/JsonInt';
 export type { LoginResponseInfo } from './models/LoginResponseInfo';
 export type { MariaDBInstallRequest } from './models/MariaDBInstallRequest';
@@ -124,9 +127,11 @@ export type { UpdateHostServerRequest } from './models/UpdateHostServerRequest';
 export type { UpdateHostServerTypeBody } from './models/UpdateHostServerTypeBody';
 export type { UpdatePlatformTypeBody } from './models/UpdatePlatformTypeBody';
 export type { UpdateSshKeyHostMappingRequest } from './models/UpdateSshKeyHostMappingRequest';
+export type { UpdateUserApplicationRequest } from './models/UpdateUserApplicationRequest';
 export type { UpdateUserPasswordRequest } from './models/UpdateUserPasswordRequest';
 export type { UpdateUserRoleMappingRequest } from './models/UpdateUserRoleMappingRequest';
 export type { UpdateUserRoleMappingResponse } from './models/UpdateUserRoleMappingResponse';
+export type { UserApplicationDao } from './models/UserApplicationDao';
 export type { UserDao } from './models/UserDao';
 export type { UserHostedDb } from './models/UserHostedDb';
 export type { UserLoginRequest } from './models/UserLoginRequest';
@@ -153,4 +158,5 @@ export { SecretsService } from './services/SecretsService';
 export { SshService } from './services/SshService';
 export { SshKeyHostMappingsService } from './services/SshKeyHostMappingsService';
 export { SshKeysService } from './services/SshKeysService';
+export { UserApplicationsService } from './services/UserApplicationsService';
 export { UserCrudService } from './services/UserCrudService';
